# 2d-roguelike

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/Base/: GameObjectBase.cpp  GameObjectBase.h  GameObjectHolder.cpp  GameObjectHolder.h
src/Components/Base/: ComponentBase.cpp  ComponentBase.h  GameObjectComponent.cpp  GameObjectComponent.h  UpdateData.h
src/Components/Debug/: DebugComp.cpp
src/Components/Drawer/: OffsetScalePair.cpp  OffsetScalePair.h  RenderOrderer.cpp  RenderOrderer.h  SpriteDrawerBasic.cpp  SpriteDrawerBasic.h
src/Components/Drawer/Drawers/: RectangleBasicDrawer.cpp  RectangleBasicDrawer.h
src/Components/Encounters/: Encounter.cpp  Encounter.h  UnitHolder.cpp  UnitHolder.h
src/Components/Movement/: BasicMovement.cpp  BasicMovement.h
src/Components/Units/: BaseUnit.cpp  BaseUnit.h
src/Deprecated/: mainDEP.cpp
